--- a/app/src/main/res/layout/crypto_row.xml
+++ b/app/src/main/res/layout/crypto_row.xml
@@ -15,15 +15,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:layout_margin="6dp">
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cryptoCard"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:onClick="@{() -> cardClickListener.onCardClick(coin)}"
+            android:layout_margin="6dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +30,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="6dp">
 
                 <ImageView
                     android:id="@+id/cryptoImage"
